syntax = "proto3";

package syft.lib.python;
import "proto/core/common/common_object.proto";


message None {
    syft.core.common.UID id_at_location = 2;
}